# mufbot-dc

./: Cargo.toml  LICENSE  README.md  build.rs  get_latest_mufbot.sh  rust-toolchain.toml  rustfmt.toml
.github/workflows/: release.yml
.husky/hooks/: pre-push
src/: db.rs  discord.rs  github.rs  main.rs  util.rs
src/db/: rollout.rs
src/db/rollout/: get.rs  new.rs  queue.rs
src/discord/: commands.rs  utils.rs
src/discord/commands/: age.rs  buildlist.rs  clear_rollouts.rs  reboot_server.rs  restart.rs  rollout.rs  shutdown.rs  version.rs
src/discord/mufbeta/: build.rs
src/discord/utils/: no_perm.rs
src/env/: mod.rs
src/util/: autoupdate.rs
