[package]
name = "mufbot-dc"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["gamersi <hello@gamersi.at>"]

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
once_cell = "1.19.0"
poise = "0.6.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
sqlite = "0.36.1"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
